--- a/style.css
+++ b/style.css
@@ -1,3 +1,59 @@
 * {
     margin: 0;
 }
+
+body {
+    background-color: rgb(239, 196, 140);
+}
+
+.body header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+header {
+    font-size: 50px;
+    font-weight: bold;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.options {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3em;
+}
+
+.left-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+}
+
+.right-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+}
+
+.sketch-area {
+    margin-top: 25px;
+    margin-right: 40px;
+    display: inline-grid;
+    grid-template-columns: repeat(16, 2fr);
+    grid-template-rows: repeat(16, 2fr);
+    border: 5px solid black;
+    border-radius: 5px;
+    height: 575px;
+    width: 575px;
+}
